deploy/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-data
          mountPath: /opt/nginx/data
      volumes:
      - name: nginx-data
        persistentVolumeClaim:
          claimName: nginx-pvc

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
# spec: 
#   selector:
#     app: nginx
#   type: LoadBalancer
#   ports:
#   - protocol: TCP 
#     port: 8080
#     targetPort: 8080
#     nodePort: 30000
